--- a/artifacts/TFaaS/TFaaS_deploy.j2
+++ b/artifacts/TFaaS/TFaaS_deploy.j2
@@ -31,7 +31,7 @@ spec:
       containers:
       - name: tfaas
         imagePullPolicy: Always
-        image: veknet/tfaas
+        image: dciangot/tfaas
         livenessProbe:
           exec:
             command:
