--- a/artifacts/deepaas/deepaas_app.j2
+++ b/artifacts/deepaas/deepaas_app.j2
@@ -12,8 +12,6 @@ kind: Deployment
 metadata:
   namespace: deepaas
   name: deepaas
-  labels:
-    app: deepaas
 spec:
   replicas: 1
   selector:
@@ -22,14 +20,13 @@ spec:
   template:
     metadata:
       labels:
-        name: deepaas
+        app: deepaas
     spec:
       containers:
         - name: deepaas
           image: {{ deepaas_dockerhub_img }}
-          requests:
-            memory: "4096Mi"
-            cpu: "1000m"
+          command: ["deepaas-run"]
+          args: ["--listen-ip","0.0.0.0"]
           ports:
           - containerPort: 5000
             name: deepaas
@@ -60,8 +57,6 @@ kind: Service
 metadata:
   namespace: deepaas
   name: deepaas
-  labels:
-    app: deepaas
 spec:
   type: NodePort
   ports:
@@ -69,4 +64,4 @@ spec:
     port: 5000
     nodePort: 35000
   selector:
-    name: deepaas
+    app: deepaas
